2004-09-27  Lluis Sanchez Gual <lluis@ximian.com>

	* ContextsTest.cs: Fixed test sequence.
	* RemotingServicesTest.cs: Minor fix.
	* ServerObject.cs: Added check for transparent proxy in all CBO methods.

2004-07-02  Lluis Sanchez Gual <lluis@ximian.com>

	* ActivationTests.cs: Fixed and enhanced tests.
	* RemotingServicesTest.cs: Added.

2004-06-23  Lluis Sanchez Gual <lluis@ximian.com>

	* ActivationTests.cs: New tests.
	* BaseCalls.cs, CallSeq.cs: Use Assert instead of the deprecated Assertion.

2004-05-03  Lluis Sanchez Gual <lluis@ximian.com>

	* AsyncCalls.cs, BaseCalls.cs, DelegateCalls.cs, ReflectionCalls.cs, 
	  ServerObject.cs, SyncCalls.cs: Improved PrimitiveParamsInOut test case.

2004-02-23  Lluis Sanchez Gual <lluis@ximian.com>

	* AsyncCalls.cs, BaseCalls.cs, CallSeq.cs, ContextHookAttribute.cs, 
	  ContextsTest.cs, CrossDomainCalls.cs, DelegateCalls.cs, HttpCalls.cs,
	  ReflectionCalls.cs, ServerObject.cs, SyncCalls.cs, TcpCalls.cs:
	  Shortened namespace name.

2003-11-11  Lluis Sanchez Gual <lluis@ximian.com>

	* BaseCalls.cs: Little fix.
	* ContextsTest.cs: Unregister dynamic properties even if there is an exception.
	* CrossDomainCalls.cs: New test for the cross-app domain channel.
	  
2003-09-01  Nick Drochak  <ndrochak@gol.com>

	* AsyncCalls.cs: Fix Build breaker on .NET 1.1.

2003-08-22  Lluis Sanchez Gual <lluis@ximian.com>

	* BaseCalls.cs: Create 3 test remote objects, one for each kind of access,
	  to avoid reuse of client proxies.
	* CallSeq.cs: Now, "domain ID" is set manually.
	* ContextsTest.cs: Added initialization of common domain id. Other small fixes.
	* ReflectionCalls.cs: Get the method for the invoke for the correct type.
	  GetType() for a proxy to interface always return MarshalByRefObject.
	* TcpCalls.cs, HttpCalls.cs: Added delegate tests.
	* DelegateCalls.cs: New test suite for calls using delegates.

2003-08-20  Lluis Sanchez Gual <lluis@ximian.com>
